prevent overflow in column list

--- a/static/assets/common.css
+++ b/static/assets/common.css
@@ -145,4 +145,7 @@ article a:link, article a:visited, article a:hover {
 .column-list .column p {
   font-size: 14px;
   line-height: 21px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
